@@ -103,8 +103,9 @@ n-i-bz  s390x: Shadow registers can now be examined using vgdb
 297993  Fix compilation of valgrind with gcc -g3.
 298394  s390x: Don't bail out on an unknown machine model. Assume it's a new model.
 298943  massif asserts with --pages-as-heap=yes when brk is changing by value different of page size
-299756  for symmetry, --free-fill must be ignored for MEMPOOL_FREE and FREELIKE client requests
-n-i-bz  bypass gcc4.4/4.5 wrong code generation causing out of memory or asserts
+299756  For symmetry, --free-fill must be ignored for MEMPOOL_FREE and FREELIKE client requests
+n-i-bz  Bypass gcc4.4/4.5 wrong code generation causing out of memory or asserts
+n-i-bz  Add missing gdbserver xml files for shadow registers for ppc32
 
 Release 3.7.0 (5 November 2011)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
